python/testData/inspections/addClassToPackageInFromImport/addClassToPackageInFromImport.py
from mypack import <error descr="Cannot find reference 'Clzz' in 'mypack'"><caret>Clzz</error>

clzz = Clzz()